change weather icon

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -3,3 +3,9 @@ body {
     font-family: $font-family;
     height: 100%;
 }
+
+.wi {
+    font-size: xx-large;
+    color: purple;
+    padding: 10px;
+}
