--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,6 +1,7 @@
 @import '_settings.scss';
 @import '_base.scss';
 @import '_bootstrap.scss';
+@import 'weather-icons.min.css';
 @import './components/_header.scss';
 @import './components/Weather/_current-weather-display.scss';
 @import './components/Weather/_daily-weather-display.scss';
